--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;700&display=swap');
 body{
     display:flex;
     align-items: center;
@@ -11,6 +12,13 @@ body{
     border-radius: 20px ;
    padding: 100px 40px;
    background-color: #000;
+}
+.container header{
+    color: #b2b2b2 ;
+    display: flex;
+    align-items:  center;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
 }
 header h2{
     font-size: 1.6rem;
@@ -54,4 +62,45 @@ header .column span{
 .piano-keys{
     display: flex;
     margin-top: 40px;
+}
+.piano-keys .key{
+    list-style: none;
+    cursor: pointer;
+    color:#a2a2a2;
+    user-select: none;
+    position: relative;
+    text-transform: uppercase;
+    margin-left: 40px;
+}
+.piano-keys .white{
+    width: 70px;
+    height: 230px;
+    border: solid 1px #000;
+    background: linear-gradient(#fff 96% , #eee 4% );
+    border-radius:5px;
+}
+.piano-keys .black{
+    width: 44px;
+    height: 140px;
+    z-index: 2;
+    margin: 0  -22px 0 -22px;
+    border: solid 1px #000000;
+    background: linear-gradient( #333 , #000 );
+    border-radius:0 0 5px 5px;
+}
+.piano-keys .key span{
+    position:absolute;
+    font-size: 1em;
+    bottom: 20px;
+    width: 100%;
+    font-size: 1.3rem;
+    text-align: center;
+}
+.piano-keys .white:active{
+    box-shadow: inset -5px 5px 20px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(to bottom #fff 0% , #eee 100%);
+}
+.piano-keys .black:active{
+    box-shadow: inset -5px 5px 10px rgba(255, 255, 255, 0.1);
+    background: linear-gradient(to bottom #000 , #434343);
 }
